--- a/.github/workflows/shared.yml
+++ b/.github/workflows/shared.yml
@@ -42,23 +42,12 @@ jobs:
         if: ${{ matrix.os == 'macos-latest' }}
         run: brew install michaeleisel/zld/zld
 
-      - name: Check
-        run: cargo check --verbose --package shared
-      - name: Build (Debug)
-        run: cargo build --verbose --package shared
-      - name: Build (Release)
+      - name: Build
         run: cargo build --verbose --package shared --release
-      - name: Run Tests (Debug)
-        run: cargo test --verbose --no-default-features --no-fail-fast --package shared
-      - name: Run Tests (Release)
+
+      - name: Tests
         run: cargo test --verbose --no-default-features --no-fail-fast --package shared --release
 
-      - uses: actions/upload-artifact@v3
-        with:
-          name: "shared_debug_${{ matrix.os }}"
-          path: |
-            target/debug/libshare*
-            target/debug/share*
       - uses: actions/upload-artifact@v3
         with:
           name: "shared_release_${{ matrix.os }}"
