--- a/.github/workflows/platform_ios.yml
+++ b/.github/workflows/platform_ios.yml
@@ -60,6 +60,6 @@ jobs:
 
       - uses: actions/upload-artifact@v3
         with:
-          name: "platform_ios_release_multi"
-          path: target/xcodegen/platform_ios/build/Build/Products/Release-iphonesimulator
+          name: "platform_ios"
+          path: target/xcodegen/platform_ios/build/Build/Products/Debug-iphonesimulator
           if-no-files-found: error
